# seiti

./: .gitignore  Cargo.toml  README.md  package.json
backend/: Cargo.toml
backend/src/: main.rs
core/: Cargo.toml
core/src/: generate.rs  lib.rs  matching.rs  noise.rs  rng.rs  types.rs
core/src/level/: apply.rs  ip.rs  mod.rs  select.rs
core/src/level/patterns/: candidate.rs  mod.rs  specs.rs  types.rs  utils.rs
frontend/src/: App.css  App.tsx
